<resources>
    <string name="app_name">Pantalla2</string>

    <string name="Boton_Superior">TEST</string>
    <string name="action_settings">Settings</string>
    <string name="Boton_Medio">ESTADÍSTICAS</string>
    <string name="Boton_Inferior">OPCIONES</string>
    <string name="Retroceso">Retroceder página</string>
    <string name="Volumen">Volumen</string>
    <string name="Background">Fondo de Pantalla</string>
</resources>
